--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "solax",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://github.com/varalakshmivundela/solarhub.git",
+  "homepage":"https://github.com/varalakshmivundela.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
